--- a/Pos_System/Views/Shared/_Layout.cshtml
+++ b/Pos_System/Views/Shared/_Layout.cshtml
@@ -17,11 +17,26 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Pos System", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @if(@User.Identity.IsAuthenticated)
+                {
+                @Html.ActionLink("Hello " + @User.Identity.Name, "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                }
+
+                else{
+
+                @Html.ActionLink("Login", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                }
+                @*@Html.ActionLink("Pos System", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    @if (@User.Identity.IsAuthenticated)
+                    {
+                        <li>
+                            <a href="@Url.Action("Logout", "Auth")">Logout</a>
+                        </li>
+                    }
+                    </ul>
             </div>
         </div>
     </div>
