--- a/Pos_System/Views/Shared/_RightView.cshtml
+++ b/Pos_System/Views/Shared/_RightView.cshtml
@@ -1,6 +1,5 @@
 ﻿@model Pos_System.ViewModel.SubViewModel2
 
-<h1>Right View</h1>
 
 <div id="catList">
     @foreach (var x in Model.Categories)
@@ -14,7 +13,7 @@
 
 
 <div class="col-md-12">
-    <input class="col-md-10" type="text" id="searchBox"/>
+    <input class="col-md-10" type="text" id="searchBox" placeholder="Search an item..."/><span class="glyphicon glyphicon-search"></span>
     @*<button id="b1" type="submit" value="Search"> Search </button>*@
 </div>
 
