--- a/Pos_System/Views/Shared/_RightViewProducts.cshtml
+++ b/Pos_System/Views/Shared/_RightViewProducts.cshtml
@@ -12,7 +12,12 @@
         <div class="fbox @item.ProductId" draggable="true">
             <input type="hidden" value="@item.ProductId" />
             <div class="imgBox">
-                <img src="~/Content/Images/computer.jpg" />
+                @*<img  />*@
+                @{
+                    var source = (string)Session[item.Name];
+
+                }
+                <img src=@source />
 
             </div>
             <div id="ProductItem_@item.ProductId" class="ProductItem" >
@@ -46,7 +51,7 @@
             var productName = $(this).find("#ProductItem_" + productId)[0].innerText;
             var productPrice = $(this).find("#hover_" + productId)[0].innerText;
 
-            //debugger;
+           
 
             let obj = { productId: productId, productName: productName, productPrice: productPrice };
 
